[project]
name = "sye-agent-mami"
version = "0.1.0"
description = "Self-Improving Yolo Engine - Multi-model Classifier Agent"
requires-python = ">=3.11"
dependencies = [
  "smolagents>=1.22.0",
  "redis>=7.0.0",
  "openai>=2.6.1",
  "google-genai>=1.46.0",
  "anthropic>=0.71.0",
  "python-dotenv>=1.1.1",
  "rich>=14.2.0",
  "pydantic>=2.12.3",
]
